basic layowt completed

--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <main>
         <div class="playGraund">
-            
+
         </div>
         <div class="aside">
+            <div class="instrument">
+                <img src="https://img.icons8.com/office/40/000000/minecraft-pickaxe.png"/>
+                <p>PICKAXE</p>
+            </div>
+            <div class="instrument">
+                <img src="https://img.icons8.com/color/40/000000/minecraft-shovel.png"/>
+                <p>SHOVEL</p>
+            </div>
+            <div class="instrument">
+                <img src="https://img.icons8.com/office/40/000000/minecraft-axe.png"/>
+                <p>AXE</p>
+            </div>
+            <div class="instrument inverting">
 
+            </div>
         </div>
     </main>
 </body>
