--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <main>
+        
         <div class="playGraund">
 
         </div>
@@ -30,5 +31,6 @@
             </div>
         </div>
     </main>
+   <script src="js/index.js"></script>
 </body>
 </html>
