instuments funtionality added

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
         </div>
         <div class="aside">
-            <div class="instrument">
+            <div class="instrument" id="pickaxe">
                 <img src="https://img.icons8.com/office/40/000000/minecraft-pickaxe.png"/>
                 <p>PICKAXE</p>
             </div>
-            <div class="instrument">
+            <div class="instrument" id="shovel">
                 <img src="https://img.icons8.com/color/40/000000/minecraft-shovel.png"/>
                 <p>SHOVEL</p>
             </div>
-            <div class="instrument">
+            <div class="instrument" id="axe">
                 <img src="https://img.icons8.com/office/40/000000/minecraft-axe.png"/>
                 <p>AXE</p>
             </div>
