--- a/game.html
+++ b/game.html
@@ -9,9 +9,10 @@
 
 <body>
     <main>
-        
-        <div class="playGraund">
+        <div class="play__container">
+            <div class="playGraund">
 
+            </div>
         </div>
         <div class="aside">
             <div class="instrument" id="pickaxe">
